--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,20 @@
-<router-outlet></router-outlet>
+<mat-sidenav-container>
+
+    <mat-sidenav #sidenav role="navigation">
+       <app-sidenav-list [sidenav]="sidenav"></app-sidenav-list>
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+
+        <mat-toolbar color="primary">
+            <app-header [sidenav]="sidenav"></app-header>
+        </mat-toolbar>
+
+        <main>
+            <router-outlet></router-outlet>
+        </main>
+
+    </mat-sidenav-content>
+
+</mat-sidenav-container>
+
