--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -8,10 +8,9 @@
                    name="email"
                    email
                    required
-                   #emailInput="ngModel"
-            >
+                   #emailInput="ngModel">
             <mat-error *ngIf="emailInput.hasError('required')">Email is required</mat-error>
-            <mat-error *ngIf="!emailInput.hasError('required')">Email is invalid</mat-error>
+            <mat-error *ngIf="!emailInput.hasError('invalid')">Email is invalid</mat-error>
         </mat-form-field>
         <mat-form-field id="password" hintLabel="Should be at least 6 chars long">
             <input type="password"
@@ -21,10 +20,20 @@
                    name="password"
                    required
                    minlength="6"
-                   #pwInput="ngModel"
-            >
+                   #pwInput="ngModel">
             <mat-hint align="end">{{ pwInput.value?.length }} / 6</mat-hint>
         </mat-form-field>
+        <mat-form-field appearance="fill" id="datepicker">
+            <input matInput
+                   [matDatepicker]="picker"
+                   placeholder="Your Birthdate"
+                   [max]="maxDate">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+
         <button type="submit" id="form-button" mat-raised-button color="primary">Submit</button>
+
+        <mat-checkbox id="checkbox" name="checkbox" required>Agree to terms and Conditions</mat-checkbox>
     </form>
 </section>
