--- a/src/app/auth/signup/signup.component.scss
+++ b/src/app/auth/signup/signup.component.scss
@@ -2,10 +2,12 @@
 #grid {
     margin-top: 2rem;
     display: grid;
-    grid-autoflow: row;
-    grid-template-areas:    "l l email    r r"
-                            "l l password r r"
-                            "l l button   r r";
+    grid-auto-flow: row;
+    grid-template-areas:    "l l email      r r"
+                            "l l password   r r"
+                            "l l datepicker r r"
+                            "l l button     r r"
+                            "l l checkbox   r r";
     grid-gap: 1rem;
 }
 
@@ -19,4 +21,16 @@
 
 #form-button {
     grid-area: button;
+    width: fit-content;
+    justify-self: center;
+    padding: 0rem 1rem;
+}
+
+#datepicker {
+    grid-area: datepicker;
+}
+
+#checkbox {
+    grid-area: checkbox;
+    text-align: center;
 }
